# hex_game

./: CMakeLists.txt
res/: cozette.fnt  mask.fs  post_proc.fs
src/: game.cpp  game.h  game_cfg.h
src/util/: arena.h  embedfile.c  zpp_bits.h
